Added 3 new API endpoints
